реализация слайдера js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/preload.css" rel="stylesheet" />
     <link href="css/header.css" rel="stylesheet" />
     <link href="css/navigation.css" rel="stylesheet" />
     <link href="css/main-link.css" rel="stylesheet" />
@@ -18,7 +19,7 @@
     <link href="css/radio.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
 
-    <script src="js/index.js" defer></script>
+    <script src="js/index.js"></script>
 
     <title>Барбер шоп</title>
   </head>
