--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="css/radio.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
 
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type="module"></script>
 
     <title>Барбер шоп</title>
   </head>
